Fixed misaligned text

--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,6 @@ a.anchor {
     display:table;
     height:380px;
     overflow:hidden;
-    float:right;
 }
 
 .vertically-centered-banner-inner {
